--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 ADD_SUBDIRECTORY(slice)
 ADD_SUBDIRECTORY(controller)
+ADD_SUBDIRECTORY(sensor)
 #ADD_SUBDIRECTORY(sync)
 #ADD_SUBDIRECTORY(tools)
 
