--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,8 +23,6 @@ if (OPENMP_FOUND)
   set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 endif()
-FIND_PACKAGE( Boost COMPONENTS thread system REQUIRED )
-INCLUDE_DIRECTORIES("${Boost_INCLUDE_DIRS}")
 FIND_PACKAGE( ITPP REQUIRED)
 INCLUDE_DIRECTORIES("${ITPP_INCLUDE_DIR}")
 FIND_PACKAGE( BLAS REQUIRED )
@@ -39,7 +37,7 @@ INCLUDE_DIRECTORIES("${CURSES_INCLUDE_DIR}")
 SET( DEPS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Deps)
 include(${DEPS_DIR}/ice/CMakeLists.txt)
 include(${DEPS_DIR}/rtl-sdr/CMakeLists.txt)
-
+include(${DEPS_DIR}/boost/CMakeLists.txt)
 # Descend into subdirectories
 ADD_SUBDIRECTORY(src)
 
