--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 ADD_SUBDIRECTORY(slice)
 ADD_SUBDIRECTORY(controller)
 ADD_SUBDIRECTORY(sensor)
+ADD_SUBDIRECTORY(collector)
 #ADD_SUBDIRECTORY(sync)
 #ADD_SUBDIRECTORY(tools)
 
