--- a/src/sensor/CMakeLists.txt
+++ b/src/sensor/CMakeLists.txt
@@ -1,4 +1,4 @@
-SET ( CPU_SOURCE_FILES SensorIQ.cpp SDR.h SDR.cpp )
+SET ( CPU_SOURCE_FILES SensorIQ.cpp SDR.h SDR.cpp Sender.cpp Sender.h SpectrumSegment.cpp SpectrumSegment.h atomicops.h readerwriterqueue.h )
 
 
 add_executable (SensorIQ ${CPU_SOURCE_FILES})
@@ -9,6 +9,7 @@ TARGET_LINK_LIBRARIES(SensorIQ
 	${CMAKE_CURRENT_SOURCE_DIR}/../ESenseInterfaces/libESenseInterfaces.so
 	${ZeroCIce_LIBRARIES}
 	${LIBRTLSDR_LIBRARIES}
+    ${Boost_LIBRARIES}
 	pthread
 	rt
 	dl
