first beta of the software

--- a/src/sensor/CMakeLists.txt
+++ b/src/sensor/CMakeLists.txt
@@ -10,6 +10,7 @@ TARGET_LINK_LIBRARIES(SensorIQ
 	${ZeroCIce_LIBRARIES}
 	${LIBRTLSDR_LIBRARIES}
     ${Boost_LIBRARIES}
+    ${ZLIB_LIBRARIES}
 	pthread
 	rt
 	dl
