--- a/src/controller/CMakeLists.txt
+++ b/src/controller/CMakeLists.txt
@@ -6,6 +6,7 @@ add_executable (ControllerIQ ${CPU_SOURCE_FILES})
 TARGET_LINK_LIBRARIES(ControllerIQ
         ${CMAKE_CURRENT_SOURCE_DIR}/../ESenseInterfaces/libESenseInterfaces.so
         ${ZeroCIce_LIBRARIES}
+	${Boost_LIBRARIES}
         pthread
         rt
 )
