--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,7 @@ ADD_SUBDIRECTORY(slice)
 ADD_SUBDIRECTORY(controller)
 ADD_SUBDIRECTORY(sensor)
 ADD_SUBDIRECTORY(collector)
+ADD_SUBDIRECTORY(test)
 #ADD_SUBDIRECTORY(sync)
 #ADD_SUBDIRECTORY(tools)
 
